Add: CSS files for web styling

--- a/chessy_frontend/index.html
+++ b/chessy_frontend/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <!-- FAVICON -->
+    <link rel="icon" href="/favicon.png">
+    <!-- TITLE -->
+    <title>Chessy</title>
+    <!-- FONT IMPORTING -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo&family=PT+Serif:wght@700&display=swap" rel="stylesheet">    
   </head>
   <body>
-    <div id="app"></div>
+    <!-- APP VUE INJECTION --> <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
