Feat: Add different fonts and icons support.

--- a/chessy_frontend/index.html
+++ b/chessy_frontend/index.html
@@ -7,10 +7,14 @@
     <link rel="icon" href="/favicon.png">
     <!-- TITLE -->
     <title>Chessy</title>
-    <!-- FONT IMPORTING -->
+    <!-- FONT IMPORTING  -->
+    <!-- font-family: 'Cairo', sans-serif;
+         font-family: 'PT Serif', serif; -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo&family=PT+Serif:wght@700&display=swap" rel="stylesheet">    
+    <!-- FONT AWESOME (ICONS) -->
+    <script src="https://kit.fontawesome.com/42873fe91e.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- APP VUE INJECTION --> <div id="app"></div>
