--- a/chessy_frontend/index.html
+++ b/chessy_frontend/index.html
@@ -12,7 +12,7 @@
          font-family: 'PT Serif', serif; -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo&family=PT+Serif:wght@700&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=PT+Serif:wght@700&display=swap" rel="stylesheet">
     <!-- FONT AWESOME (ICONS) -->
     <script src="https://kit.fontawesome.com/42873fe91e.js" crossorigin="anonymous"></script>
   </head>
