--- a/chessy_frontend/index.html
+++ b/chessy_frontend/index.html
@@ -9,10 +9,11 @@
     <title>Chessy</title>
     <!-- FONT IMPORTING  -->
     <!-- font-family: 'Cairo', sans-serif;
-         font-family: 'PT Serif', serif; -->
+         font-family: 'PT Serif', serif; 
+         font-family: 'Outfit', sans-serif; -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=PT+Serif:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Outfit:wght@200;500;900&family=PT+Serif:wght@700&display=swap" rel="stylesheet">
     <!-- FONT AWESOME (ICONS) -->
     <script src="https://kit.fontawesome.com/42873fe91e.js" crossorigin="anonymous"></script>
   </head>
