--- a/chessy_frontend/index.html
+++ b/chessy_frontend/index.html
@@ -14,6 +14,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Outfit:wght@200;500;900&family=PT+Serif:wght@700&display=swap" rel="stylesheet">
+    
+    <!-- font-family: 'Arsenal', sans-serif; -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arsenal:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet"> 
     <!-- FONT AWESOME (ICONS) -->
     <script src="https://kit.fontawesome.com/42873fe91e.js" crossorigin="anonymous"></script>
   </head>
